--- a/HealthLife/src/app/Cliente/actividades/actividades.component.html
+++ b/HealthLife/src/app/Cliente/actividades/actividades.component.html
@@ -12,6 +12,12 @@
                 </div>
             </div>
         </div>
+
+        <div class="footer-card">
+            <div class="contenedor-boton">
+              <input (click)="completarActividades()" type="submit" value="Actividad Completada" class="btn-suscribirse">
+            </div>
+          </div>
     </div>
     
 </body>
