--- a/HealthLife/src/app/Cliente/detalle-plan/detalle-plan.component.html
+++ b/HealthLife/src/app/Cliente/detalle-plan/detalle-plan.component.html
@@ -28,7 +28,7 @@
 
     <!--Acordeon que muestra el detalle que se realiza en cada día-->
     <div class="detalle-actividaades-plan">
-      <div class="accordion" id="accordionExample">
+      <!--<div class="accordion" id="accordionExample">
 
         <div class="accordion-item" *ngFor="let element of detallePlan">
           <h2 class="accordion-header" id="headingOne">
@@ -48,7 +48,7 @@
         </div>
 
         
-      </div>
+      </div>-->
     </div>
 
     <!--Botón para suscribirse al plan-->
