--- a/HealthLife/src/app/Cliente/mis-planes/mis-planes.component.html
+++ b/HealthLife/src/app/Cliente/mis-planes/mis-planes.component.html
@@ -6,7 +6,7 @@
             <div class="box-info">
                 <div class="course">
                     <div class="course-img">
-                        <img src="../../../assets/img/cursos/verduras.jpg" alt="">
+                        <img [src]="portadaNutricion" alt="">
                     </div>
 
                     <div class="course-detail">
