--- a/HealthLife/src/app/Cliente/estadisticas/estadisticas.component.html
+++ b/HealthLife/src/app/Cliente/estadisticas/estadisticas.component.html
@@ -13,4 +13,18 @@
       </div>
     </div>
 
+    <div class="box-courses-wrapper">
+      <div class="circular-progress2">
+        <div class="value-container2">Curso 1</div>
+      </div>
+
+      <div class="circular-progress2">
+        <div class="value-container2">Curso 2</div>
+      </div>
+
+      <div class="circular-progress2">
+        <div class="value-container2">Curso 3</div>
+      </div>
+    </div>
+
   </body>
