--- a/HealthLife/src/app/Cliente/planes/planes.component.html
+++ b/HealthLife/src/app/Cliente/planes/planes.component.html
@@ -1,4 +1,3 @@
-
 <body>
     <div class="box-courses-wrapper" *ngIf="!detalle; else detallesplan ">
        <!--El que se debe esconder al poner el detalle--> 
@@ -6,7 +5,7 @@
             <div class="box-info">
                 <div class="course">
                     <div class="course-img">
-                        <img src="../../../assets/img/cursos/verduras.jpg" alt="">
+                        <img  [src]="tipo==2 ? portadaNutricion: portadaEjercicios" alt="">
                     </div>
 
                     <div class="course-detail">
