--- a/HealthLife/src/app/Cliente/profesionales/profesionales.component.html
+++ b/HealthLife/src/app/Cliente/profesionales/profesionales.component.html
@@ -5,7 +5,7 @@
             <div class="image-content">
                 <span class="overlay"></span>
                 <div class="card-image">
-                    <img src=".././../../assets/img/inicio/person_1.jpg" class="card-img">
+                    <img src=".././../../assets/img/cursos/user-profile.png" class="card-img">
                 </div>
             </div>
 
