--- a/HealthLife/src/app/Profesional/clientes-admin-profesionales/clientes-admin-profesionales.component.html
+++ b/HealthLife/src/app/Profesional/clientes-admin-profesionales/clientes-admin-profesionales.component.html
@@ -4,7 +4,7 @@
     <h5 class="card-title">Clientes suscritos</h5>
     <div class="dataTable-wrapper dataTable-loading no-footer sortable searchable fixed-columns">
         <div class="dataTable-top">
-            <div class="dataTable-search"><input class="dataTable-input" placeholder="Search..." type="text"></div>
+            <div class="dataTable-search"><input class="dataTable-input" placeholder="Buscar..." type="text"></div>
         </div>
         <div class="dataTable-container">
             <table class="table datatable dataTable-table">
@@ -50,30 +50,6 @@
         </div>
     </div>
 </div>
-
-<!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-    Launch demo modal
-  </button>
-  
-  <!-- Modal -->
-  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
-          ...
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save changes</button>
-        </div>
-      </div>
-    </div>
-  </div>
 
 <!-- Modal -->
 <div class="modal fade" id="detallesCliente" tabindex="-1" aria-labelledby="detallesClienteLabel" aria-hidden="true">
