--- a/HealthLife/src/app/Profesional/planes-admin-profesionales/planes-admin-profesionales.component.html
+++ b/HealthLife/src/app/Profesional/planes-admin-profesionales/planes-admin-profesionales.component.html
@@ -10,16 +10,16 @@
                     <div id="example1_wrapper" class="dataTables_wrapper dt-bootstrap4">
                         <div class="row">
                             <div class="col-sm-12 col-md-10">
-                                <div id="example1_filter" class="dataTables_filter"><label>Search:<input type="search"
+                                <div id="example1_filter" class="dataTables_filter"><label>Buscar:<input type="search"
                                             class="form-control form-control-sm" placeholder=""
                                             aria-controls="example1"></label></div>
                             </div>
                             <div class="col-sm-12 col-md-2 pt-3">
                                 <button type="button" class="btn btn-primary" data-bs-toggle="modal"
-                                    data-bs-target="#agregarPlanes">Crear nuevo plan</button>
+                                    data-bs-target="#agregarPlanes">Nuevo plan</button>
                             </div>
                         </div>
-                        <div class="row">
+                        <div class="mt-4 row">
                             <div class="col-sm-12">
                                 <table id="example1" class="table table-bordered table-striped dataTable dtr-inline"
                                     aria-describedby="example1_info">
@@ -61,20 +61,12 @@
                                             </td>
                                             <td>{{element.publico}}</td>
                                             <td>
-                                                <button class=" btn btn-sm btn-primary mx-1">Modificar</button>
-                                                <button class="btn btn-sm btn-danger mx-1">Eliminar</button>
+                                                <button (click)="mensajeMantenimiento()" class=" btn btn-sm btn-primary mx-1">Modificar</button>
+                                                <button (click)="mensajeMantenimiento()" class="btn btn-sm btn-danger mx-1">Eliminar</button>
                                             </td>
                                         </tr>
                                     </tbody>
-                                    <tfoot>
-                                        <tr>
-                                            <th rowspan="1" colspan="1">Nombre del plan</th>
-                                            <th rowspan="1" colspan="1">Edad recomendada</th>
-                                            <th rowspan="1" colspan="1">IMC recomendado</th>
-                                            <th rowspan="1" colspan="1">Etiquetas</th>
-                                            <th rowspan="1" colspan="1">¿Es público?</th>
-                                        </tr>
-                                    </tfoot>
+                                    
                                 </table>
                             </div>
                         </div>
