Correccion de errores y disenio

--- a/HealthLife/src/app/Auth/login/login.component.html
+++ b/HealthLife/src/app/Auth/login/login.component.html
@@ -378,6 +378,8 @@
                   <label><fa-icon [icon]="faDescripcionPerfil"></fa-icon>  ‍‍‍‍‍Descripción para su perfil</label>
               </div>
 
+              
+
               <!--Seleccionar los años de experiencia
               <div class="entrada-textos">
                 <select 
@@ -396,6 +398,7 @@
               <!--Opción para aceptar los términos y condiciones-->
               <p class="text">
                 <input 
+                id="checkbox2"
                 #checkbox2
                 type="checkbox"> He leído y acepto las 
                 <a (click)="politicasPrivacidadProfesionales()"> Políticas de privacidad para profesionales</a>
