--- a/HealthLife/src/app/Cliente/detalle-plan/detalle-plan.component.html
+++ b/HealthLife/src/app/Cliente/detalle-plan/detalle-plan.component.html
@@ -4,14 +4,15 @@
     <!--Cabecera del plan-->
     <div class="cabecera-plan">
       <div class="portada-curso">
-        <img src="../../../assets/img/cursos/verduras.jpg" alt="">
+        <img  src="../../../assets/img/cursos/portada-plan-comidas.png" alt="">
       </div>
       <div class="info-cabecera">
         <h3>{{plan.nombre}}</h3>
         <p>
-          <fa-icon [icon]="faUsuario"></fa-icon><b>&nbsp; Por:</b> {{plan.id_profesional}}
+          <!--<fa-icon [icon]="faUsuario"></fa-icon><b>&nbsp; Por:</b> {{plan.id_profesional}}-->
         </p>
         <p>
+          <br/>
           <fa-icon [icon]="faGratis"></fa-icon><b>&nbsp; Estado:</b> Gratis
         </p>
         <!--<p><fa-icon [icon]="faObjetivos"></fa-icon><b>&nbsp; Objetivos:</b> Bajar de peso</p>-->
