--- a/HealthLife/src/app/Auth/login/login.component.css
+++ b/HealthLife/src/app/Auth/login/login.component.css
@@ -205,6 +205,22 @@ label {
     color: #707070;
     text-decoration: underline;
 }
+
+
+#checkbox2{
+    margin-top: 85px;
+}
+
+.entrada-textos textarea{
+    width: 100%;
+    height: 320%;
+    margin-top: 5px;
+    margin-bottom: 15px;
+    padding: 10px;
+    border-radius: 5px;
+    border: none;
+    border: .5px solid gray;
+}
   
 .text a:hover {
     color: #6853f1;
