--- a/HealthLife/src/app/Cliente/detalle-plan/detalle-plan.component.css
+++ b/HealthLife/src/app/Cliente/detalle-plan/detalle-plan.component.css
@@ -45,16 +45,16 @@ body{
 }
 
 .portada-curso img{
-    width: 100%;
-    height: 91%;
-    margin-top: 15px;
-    margin-left: 15px;
+    width: 40%;
+    height: 60%;
+    margin-top: 30px;
+    margin-left: 30px;
     margin-bottom: 25px;
     border-radius: 5px;
 }
 
 .info-cabecera{
-    margin-left: 35px;
+    margin-left: -20%;
     margin-top: 15px;
     margin-bottom: 15px;
     width: 90%;
