--- a/HealthLife/src/app/Cliente/mis-planes/mis-planes.component.html
+++ b/HealthLife/src/app/Cliente/mis-planes/mis-planes.component.html
@@ -54,7 +54,7 @@
         <div class="boton-regresar" (click)="cambiarComponente(false)">
             <input type="submit" value="Volver" class="btn-Volver" id="iniciar"> 
         </div>
-        <app-actividades [id]="plan.id_planes"></app-actividades>
+        <app-actividades [id]="plan.id_planes" [suscritos]="true"></app-actividades>
     </ng-template>
 
 </body>
