--- a/HealthLife/src/app/Cliente/perfil-usuario/perfil-usuario.component.html
+++ b/HealthLife/src/app/Cliente/perfil-usuario/perfil-usuario.component.html
@@ -4,11 +4,11 @@
             <div class="d-flex flex-column align-items-center text-center p-3 py-5">
                 <img class="rounded-circle mt-4" width="150px" src="../../../assets/img/inicio/person_2.jpg">
                 <br/>
-                <span class="font-weight-bold">Jordan Vera</span>
-                <span class="text-black-50">jverac12@uteq.edu.ec</span>
+                <span class="font-weight-bold">{{datos.nombres}}</span>
+                <span class="text-black-50">{{datos.correo}}</span>
                 <span> Cliente</span>
 
-                <div class="mt-3 text-center" style="width: 100%;">
+                <div class="mt-3 text-center" style="width: 100%;" *ngIf="this.id==null">
                     <button style="width: 50%" class="btn btn-primary profile-button" type="button" (click)="mensajeMantenimiento()">Añadir foto</button>
                 </div>
             </div>
@@ -23,55 +23,55 @@
                 <div class="row mt-2">
                     <div class="col-md-6">
                         <label class="labels" style="font-size: 16px;">Nombres:</label>
-                        <input style="font-size: 14px;" type="text" class="form-control" placeholder="Jordan Fabian" [value]="datos.nombres">
+                        <input style="font-size: 14px;" type="text" class="form-control" placeholder="Jordan Fabian" [value]="datos.nombres" [disabled]="this.id!=null">
                     </div>
                     <div class="col-md-6"><label class="labels" style="font-size: 16px;">Apellidos:</label>
-                        <input style="font-size: 14px;" type="text" class="form-control" [value]="datos.apellidos" placeholder="Vera Coello">
+                        <input style="font-size: 14px;" type="text" class="form-control" [value]="datos.apellidos" placeholder="Vera Coello" [disabled]="this.id!=null">
                     </div>
                 </div>
 
                 <div class="row mt-4">
                     <div class="col-md-12">
                         <label class="labels" style="font-size: 16px;">Email:</label>
-                        <input style="font-size: 14px;" type="text" class="form-control" placeholder="usuario@uteq.edu.ec" [value]="datos.correo">
+                        <input style="font-size: 14px;" type="text" class="form-control" placeholder="usuario@uteq.edu.ec" [value]="datos.correo" [disabled]="this.id!=null">
                     </div>
                 </div>
 
                 <div class="row mt-4">
                     <div class="col-md-6">
                         <label style="font-size: 16px;" class="labels">Estatura (metros):</label>
-                        <input style="font-size: 14px;" type="number" class="form-control" placeholder="1.70" [value]="datos.talla">
+                        <input style="font-size: 14px;" type="number" class="form-control" placeholder="1.70" [value]="datos.talla" [disabled]="this.id!=null">
                     </div>
                     <div class="col-md-6">
                         <label style="font-size: 16px;" class="labels">Peso (Kilogramos):</label>
-                        <input style="font-size: 14px;" type="number" class="form-control" [value]="datos.peso" placeholder="55">
+                        <input style="font-size: 14px;" type="number" class="form-control" [value]="datos.peso" placeholder="55" [disabled]="this.id!=null">
                     </div>
                 </div>
 
                 <div class="row mt-1">
                     <div class="mt-3 col-md-12">
                         <label style="font-size: 16px;" class="labels">Sexo:</label>
-                        <input style="font-size: 14px;" type="text" class="form-control" [value]="datos.sexo" >
+                        <input style="font-size: 14px;" type="text" class="form-control" [value]="datos.sexo" [disabled]="this.id!=null">
                     </div>
 
                     <div class="mt-3 col-md-12">
                         <label style="font-size: 16px;" class="labels">Hábitos:</label>
-                        <input style="font-size: 14px;" type="text" class="form-control" [value]="datos.habitos">
+                        <input style="font-size: 14px;" type="text" class="form-control" [value]="datos.habitos" [disabled]="this.id!=null">
                     </div>
 
                     <div class=" mt-3 col-md-12">
                         <label style="font-size: 16px;" class="labels">Alergias:</label>
-                        <input style="font-size: 14px;" type="text" class="form-control" [value]="datos.alergias">
+                        <input style="font-size: 14px;" type="text" class="form-control" [value]="datos.alergias" [disabled]="this.id!=null">
                     </div>
                     <div class="mt-3 col-md-12">
                         <label style="font-size: 16px;" class="labels">Enfermedades:</label>
-                        <input style="font-size: 14px;" type="text" class="form-control" [value]="datos.enfermedades">
+                        <input style="font-size: 14px;" type="text" class="form-control" [value]="datos.enfermedades" [disabled]="this.id!=null">
                     </div>
                 </div>
 
-                <!--<div class="mt-5 text-center" style="width: 100%;" *ngIf="this.id==null">
+                <div class="mt-5 text-center" style="width: 100%;" *ngIf="this.id==null">
                     <button style="width: 30%" class="btn btn-primary profile-button" type="button">Guardar</button>
-                </div>-->
+                </div>
             </div>
         </div>
     </div>
