--- a/HealthLife/src/app/Cliente/inicio-dashboard/inicio-dashboard.component.html
+++ b/HealthLife/src/app/Cliente/inicio-dashboard/inicio-dashboard.component.html
@@ -6,7 +6,7 @@
         </div>
         <br />
 
-        <h4 id="mensaje-bienvenida" data-aos="fade-up" data-aos-duration="1100">Algunos ideas recomendadas para ti:</h4>
+        <h4 id="mensaje-bienvenida" data-aos="fade-up" data-aos-duration="1100">Algunos videos recomendados para ti:</h4>
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3" data-aos="fade-up" data-aos-duration="1100">
             <div class="col">
                 <div class="card shadow-sm">
@@ -14,13 +14,13 @@
                         src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/frutas-1552246920.jpg?crop=1.00xw:0.753xh;0,0.105xh&resize=640:*">
 
                     <div class="card-body">
-                        <p class="card-text">Dentro de esta sección se detallan los pasos para elabrar comidas y batidos a base de frutas buenas en vitaminas que aporten a tu alimentación.</p>
+                        <p class="card-text">En esta sección se detallan los pasos para elabrar batidos refrescantes y saludables a base de frutas buenas en vitaminas para tu alimentación.</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
-                                <button type="button" class="btn btn-sm btn-outline-secondary">Ver</button>
-                                <button type="button" class="btn btn-sm btn-outline-secondary">Editar</button>
+                                <a href="https://www.youtube.com/watch?v=qPDwGpmJSuE" target="_blank" type="button" class="btn btn-sm btn-outline-secondary">Ver</a>
+                                 
                             </div>
-                            <small class="text-muted">9 mins</small>
+                            <small class="text-muted">7 min</small>
                         </div>
                     </div>
                 </div>
@@ -34,8 +34,8 @@
                         <p class="card-text">Aquí podrás encontrar consejos sobre como realizar estiramientos para empezar con los ejercicios que se detallan en los planes.</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
-                                <button type="button" class="btn btn-sm btn-outline-secondary">Ver</button>
-                                <button type="button" class="btn btn-sm btn-outline-secondary">Editar</button>
+                                <a href="https://www.youtube.com/watch?v=mHP_rcA0xEc" target="_blank" type="button" class="btn btn-sm btn-outline-secondary">Ver</a>
+                                 
                             </div>
                             <small class="text-muted">9 mins</small>
                         </div>
@@ -51,8 +51,8 @@
                         <p class="card-text">Dentro de esta sección puedes obtener información sobre como hacer comidas basadas en verduras y vegetales para tu buena alimentación.</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
-                                <button type="button" class="btn btn-sm btn-outline-secondary">Ver</button>
-                                <button type="button" class="btn btn-sm btn-outline-secondary">Editar</button>
+                                <a href="https://www.youtube.com/watch?v=Gc1wdOh_RMg" target="_blank" type="button" class="btn btn-sm btn-outline-secondary">Ver</a>
+                                 
                             </div>
                             <small class="text-muted">9 mins</small>
                         </div>
