--- a/HealthLife/src/app/Profesional/inicio-profesionales/inicio-profesionales.component.html
+++ b/HealthLife/src/app/Profesional/inicio-profesionales/inicio-profesionales.component.html
@@ -10,10 +10,9 @@
               <p class="card-text">En esta sección puedes encontrar consejos que te ayudarán a crear un buen plan para ejercicios de pectorales los cuales verán tus usuarios.</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Ver</button>
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Editar</button>
+                  <a href="https://www.youtube.com/watch?v=5O--03Wm3Ag" target="_blank" type="button" class="btn btn-sm btn-outline-secondary">Ver</a>                 
                 </div>
-                <small class="text-muted">9 mins</small>
+                <small class="text-muted">12 mins</small>
               </div>
             </div>
           </div>
@@ -26,26 +25,23 @@
               <p class="card-text">Aquí puedes encontrar la mejor información para crear cursos que combinen los vegetales con alimentos que contienen grasas naturales.</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Ver</button>
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Editar</button>
+                  <a href="https://www.youtube.com/watch?v=zUWgne4Elbs" target="_blank" type="button" class="btn btn-sm btn-outline-secondary">Ver</a>                
                 </div>
-                <small class="text-muted">9 mins</small>
+                <small class="text-muted">5 mins</small>
               </div>
             </div>
           </div>
         </div>
         <div class="col">
           <div class="card shadow-sm">
-            <img class="bd-placeholder-img card-img-top" width="100%" height="225" src="https://www.dir.cat/blog/wp-content/uploads/2019/04/actividades-dirigidas-verano-.jpg">
-
+            <img class="bd-placeholder-img card-img-top" width="100%" height="225" src="https://cdn.static.aptavs.com/imagenes/ejercicios-basicos-de-gimnasio-cuales-son-y-su-importancia/ejercicios-basicos-de-gimnasio_905x603.jpg">
             <div class="card-body">
               <p class="card-text">En este apartado puedes encontrar tips que te ayudarán a crear un buen plan de ejercicios básicos de gym para todos tus usuarios.</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Ver</button>
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Editar</button>
+                  <a href="https://www.youtube.com/watch?v=HAvUg6VLQZc" target="_blank" type="button" class="btn btn-sm btn-outline-secondary">Ver</a>                 
                 </div>
-                <small class="text-muted">9 mins</small>
+                <small class="text-muted">7 mins</small>
               </div>
             </div>
           </div>
@@ -59,8 +55,7 @@
               <p class="card-text">Dentro de esta sección puedes encontrar consejos para crear planes con frutas, para que tus usuarios consuman en el desayuno.</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Ver</button>
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Editar</button>
+                  <a href="https://www.youtube.com/watch?v=WJbufGEAgsE" target="_blank" type="button" class="btn btn-sm btn-outline-secondary">Ver</a>                 
                 </div>
                 <small class="text-muted">9 mins</small>
               </div>
@@ -75,8 +70,7 @@
               <p class="card-text">Aquí podrás encontrar consejos sobre como crear los mejores planes para realizar los estiramientos de músculos y mostrarlos a tus usuarios.</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Ver</button>
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Editar</button>
+                  <a href="https://www.youtube.com/watch?v=Lm3HYH2iAlc" target="_blank" type="button" class="btn btn-sm btn-outline-secondary">Ver</a>                  
                 </div>
                 <small class="text-muted">9 mins</small>
               </div>
@@ -91,8 +85,7 @@
               <p class="card-text">Dentro de esta sección puedes obtener información sobre como crear tus planes basados en alimentos como verduras y vegetales.</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Ver</button>
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Editar</button>
+                  <a href="https://youtu.be/rmlNt6LjzeE" target="_blank" type="button" class="btn btn-sm btn-outline-secondary">Ver</a>
                 </div>
                 <small class="text-muted">9 mins</small>
               </div>
@@ -100,7 +93,7 @@
           </div>
         </div>
 
-        
+      
       </div>
     </div>
   </div>
