--- a/HealthLife/src/app/Auth/login/login.component.html
+++ b/HealthLife/src/app/Auth/login/login.component.html
@@ -22,7 +22,8 @@
               <div class="entrada-textos">
                 <input 
                   type="text" 
-                  minlength="4" 
+                  [minlength]="4"
+                  [maxlength]="20" 
                   class="campo-entrada" 
                   autocomplete="off" 
                   required
@@ -34,7 +35,8 @@
               <div class="entrada-textos">
                 <input 
                   type="password" 
-                  minlength="8" 
+                  [minlength]="8"
+                  [maxlength]="12"
                   class="campo-entrada" 
                   autocomplete="off" 
                   required
@@ -114,7 +116,7 @@
               <!--Campo para ingresar email-->
               <div class="entrada-textos">
                 <input 
-                  [maxlength]="30"
+                  [maxlength]="20"
                   type="text" 
                   class="campo-entrada" 
                   autocomplete="off" 
@@ -126,7 +128,7 @@
               <!--Campo para ingresar contraseña-->
               <div class="entrada-textos">
                 <input 
-                  [maxLength]="15"
+                  [maxLength]="12"
                   #clave1
                   id="clave1"
                   type="password" 
@@ -141,7 +143,7 @@
               <!--Campo para confirmar la contraseña-->
               <div class="entrada-textos">
                 <input
-                [maxLength]="15"
+                [maxLength]="12"
                   #clave2
                   id="clave2"
                   type="password" 
@@ -187,6 +189,7 @@
               <!--Campo para ingresar la estatura en metros-->
               <div class="entrada-textos">
                 <input 
+                  [maxlength]="3"
                   type="number" 
                   class="campo-entrada" 
                   autocomplete="off" 
@@ -198,6 +201,7 @@
               <!--Campo para ingresar el peso en KG-->
               <div class="entrada-textos">
                 <input 
+                  [maxlength]="3"
                   type="number" 
                   class="campo-entrada" 
                   autocomplete="off" 
@@ -282,7 +286,7 @@
               <!--Campo para ingresar Email-->
               <div class="entrada-textos">
                 <input 
-                  [maxlength]="30"
+                  [maxlength]="20"
                   type="text" 
                   class="campo-entrada" 
                   autocomplete="off" 
@@ -294,7 +298,7 @@
               <!--Campo para ingresar contraseña-->
               <div class="entrada-textos">
                 <input 
-                  [maxLength]="15"
+                  [maxLength]="12"
                   #clave3
                   id="clave3"
                   type="password" 
